# philosophers2

./: .gitignore  CMakeLists.txt  Makefile  manual.txt  test.sh
lib/: philo.h
src/: data_init.c  dinner.c  getter_setter.c  main.c  monitoring.c  monitoring_utils.c  parsing.c  parsing_utils.c  safe_function_handler.c  time.c  utils.c  write_status.c
